sources/cluster-cert/webhook-config.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: static-cert-issuer-webhook
webhooks:
- name: static-cert-issuer.certmanager.io
  clientConfig:
    service:
      name: static-cert-issuer-webhook
      namespace: static-cert-system
      path: "/mutate"
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURxVENDQXBHZ0F3SUJBZ0lVTWpmYU5NMjlpVTltUjF5WXZuVkxibWcwejB3d0RRWUpLb1pJaHZjTkFRRUwKQlFBd1pERUxNQWtHQTFVRUJoTUNWVk14Q3pBSkJnTlZCQWdNQWtOQk1Rc3dDUVlEVlFRSERBSlRSakViTUJrRwpBMVVFQ2d3U2MzUmhkR2xqTFdObGNuUXRhWE56ZFdWeU1SNHdIQVlEVlFRRERCVnpkR0YwYVdNdFkyVnlkQzFwCmMzTjFaWEl0WTJFd0hoY05NalV3TnpJek1EVXhOekk0V2hjTk1qWXdOekl6TURVeE56STRXakJrTVFzd0NRWUQKVlFRR0V3SlZVekVMTUFrR0ExVUVDQXdDUTBFeEN6QUpCZ05WQkFjTUFsTkdNUnN3R1FZRFZRUUtEQkp6ZEdGMAphV010WTJWeWRDMX [...]
  rules:
  - operations: ["CREATE"]
    apiGroups: ["cert-manager.io"]
    apiVersions: ["v1"]
    resources: ["certificates"]
  admissionReviewVersions: ["v1", "v1beta1"]
  sideEffects: None
  failurePolicy: Ignore
